FileTime fallback; cleaned up defective files and filetypes.